fix scrollbar styling not working for firefox

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,10 @@ code {
 /*
     Scrollbar
 */
+@supports (-moz-appearance:none) {
+  :root { scrollbar-color: #2E282A #FFC914; }
+}
+
 ::-webkit-scrollbar {
   background: #FFC914;
 }
